Fixed fade animation on the mobile games

--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ section .container:hover .txtImg h2 {
   color: #FF9900;
 }
 
-#Jeu1, #Jeu2, #Jeu3, #Jeu4, #Jeu5, #Jeu6, #youtubeVid {
+#Jeu1, #Jeu2, #Jeu3, #Jeu4, #Jeu5, #Jeu6, #Jeu7, #Jeu8, #youtubeVid {
   display: none;
 }
 
