--- a/sass/_stylePage.scss
+++ b/sass/_stylePage.scss
@@ -124,7 +124,7 @@ section .container:hover .txtImg h2{
   color: $orange;
 }
 
-#Jeu1, #Jeu2, #Jeu3, #Jeu4, #Jeu5, #Jeu6, #youtubeVid{
+#Jeu1, #Jeu2, #Jeu3, #Jeu4, #Jeu5, #Jeu6, #Jeu7, #Jeu8, #youtubeVid{
   display: none;
 }
 
